--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
 }
 
 .container {
@@ -25,6 +28,8 @@
     background-color: rgb(41, 124, 77);
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
+    grid-template-rows: 1fr 3fr 3fr 6fr;
+    gap: 50px;
 }
 
 .main {
@@ -50,7 +55,7 @@ button.nav {
     color: rgb(236, 216, 189);
     border: none;
     font-size: 24px;
-    border-radius: 6px;
+    border-radius: 16px;
 }
 
 div.topRow {
@@ -64,7 +69,7 @@ input.search {
     width: 65%;
     margin-left: 20px;
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 16px;
     font-size: 16px;
     border: 3px solid rgb(236, 185, 119);
 }
@@ -96,6 +101,9 @@ div.botRow {
 div.intro {
     grid-column: 2 / 3;
     margin-top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 2fr 4fr;
+    gap:  15px;
 }
 
 div.welcome {
@@ -108,6 +116,7 @@ div.user {
     font-size: 30px;
     color: rgb(41, 124, 77);
     font-weight: bold;
+    grid-column: 2 / 3;
 }
 
 button#head {
@@ -116,7 +125,7 @@ button#head {
 
 div.main {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr;
     grid-template-columns:  2fr 2fr 1fr ;
     gap: 15px;
     padding: 10px;
@@ -166,6 +175,11 @@ div#con {
     border-left: 5px solid rgb(41, 124, 77);
     color: rgb(32, 94, 59);
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: space-between;
+    padding: 15px;
 }
 
 h2 {
@@ -204,5 +218,41 @@ p.info {
 }
 
 .prof {
-    color: rgb(32, 94, 59)
+    color: rgb(32, 94, 59);
+    font-size: 20px;
+}
+
+div.icons {
+    display: flex;
+    align-self: flex-end;
+    justify-content: space-evenly;
+    
+}
+
+div.acct {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 15px;
+}
+
+img.profile {
+    border-radius: 64px;
+    height: 100px;
+    width: 100px;
+    grid-row: 1 / 3;
+}
+
+img.profile2 {
+    border-radius: 64px;
+    height: 100px;
+    width: 100px;
+    grid-area: 1 / 1 / 3 / 2;
+}
+
+img.prof-tiny{
+    border-radius: 16px;
+}
+
+svg.notification {
+    color: rgb(41, 124, 77);
 }
